# edamame

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: conf.py  edamame.classifier.rst  edamame.eda.rst  edamame.regressor.rst  index.rst  modules.rst
docs/_build/doctrees/: edamame.classifier.doctree  edamame.doctree  edamame.eda.doctree  edamame.regressor.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  edamame.classifier.html  edamame.eda.html  edamame.html  edamame.regressor.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
edamame/classifier/: __init__.py  classification.py  diagnose.py
edamame/eda/: __init__.py  eda.py  tools.py
edamame/regressor/: __init__.py  diagnose.py  regression.py
examples/: README.md
examples/classification/: binary.ipynb  classification.ipynb  multilabel.ipynb  svm.pkl
examples/classification/.ipynb_checkpoints/: classification-checkpoint.ipynb
examples/regression/: X.csv  eda.ipynb  linear.pkl  regression.ipynb  y.csv
notebook/: eda_example.ipynb
notebooks/: eda_example.ipynb
src/edamame/: __eda.py  __init__.py  __tools.py  classification.py  eda.py  reg.py  regression.py  tools.py
src/edamame/classifier/: __classification.py  __init__.py  classification.py
src/edamame/eda/: eda.py
src/edamame/experiment/: __init__.py  func.py
src/edamame/regression/: __init__.py
src/edamame/regressor/: __diagnose.py  __diagnose_2.py  __diagnose_v2.py  __init__.py  __regression.py  diagnose.py  regression.py
(+16 files in other folders)
