[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edamame"
version = "0.45"
authors = [
  { name="Marco Salvalaggio", email="mar.salvalaggio@gmail.com" },
]
description = "Exploratory data analysis tools"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "ipython",
    "matplotlib",
    "seaborn",
    "scipy",
    "phik",
    "ipywidgets",
    "xgboost",
]


[project.urls]
"Homepage" = "https://github.com/marcosalvalaggio/edamame"
"Bug Tracker" = "https://github.com/marcosalvalaggio/edamame/issues"
